--- a/Snowfall/Snowfall.vcxproj.filters
+++ b/Snowfall/Snowfall.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="CameraFlyComponent.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="TestComponent.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SnowChunk.h">
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="CameraFlyComponent.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="TestComponent.h">
       <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
