--- a/SnowfallEngine/SnowfallEngine.vcxproj
+++ b/SnowfallEngine/SnowfallEngine.vcxproj
@@ -84,6 +84,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)\Dependencies\glew-2.0.0-win32\glew-2.0.0\include;$(SolutionDir)\Dependencies\glfw-3.2.1.bin.WIN64\include;$(SolutionDir)\Dependencies\glm;$(SolutionDir)\Dependencies\stb\include;$(SolutionDir)\Dependencies\bullet3\include;D:\Nikita\Documents\Visual Studio 2015\Snowfall\Dependencies\boost_1_69_0;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\Dependencies\glew-2.0.0-win32\glew-2.0.0\lib\Release\x64;$(SolutionDir)\Dependencies\glfw-3.2.1.bin.WIN64\lib-vc2015;$(SolutionDir)\Dependencies\bullet3\lib;$(LibraryPath)</LibraryPath>
+    <SourcePath>$(SolutionDir)\Dependencies\stb\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -136,7 +139,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -144,12 +147,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;SNOWFALLENGINE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glew32.lib;glfw3.lib;BulletDynamics.lib;BulletCollision.lib;LinearMath.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -188,6 +193,7 @@
     <ClCompile Include="ShaderDescriptor.cpp" />
     <ClCompile Include="ShaderPreprocessor.cpp" />
     <ClCompile Include="ShadowMapRenderSystem.cpp" />
+    <ClCompile Include="SkyboxComponent.cpp" />
     <ClCompile Include="Snowfall.cpp" />
     <ClCompile Include="SubmitBuffer.cpp" />
     <ClCompile Include="System.cpp" />
@@ -234,6 +240,7 @@
     <ClInclude Include="ShaderDescriptor.h" />
     <ClInclude Include="ShaderPreprocessor.h" />
     <ClInclude Include="ShadowMapRenderSystem.h" />
+    <ClInclude Include="SkyboxComponent.h" />
     <ClInclude Include="Snowfall.h" />
     <ClInclude Include="SubmitBuffer.h" />
     <ClInclude Include="Texture.h" />
@@ -242,8 +249,10 @@
     <ClInclude Include="VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CopyToSDR.glsl" />
     <None Include="Lighting.glsl" />
     <None Include="SimplePBRShader.glsl" />
+    <None Include="SkyboxShader.glsl" />
     <None Include="SnowfallShader.glsl" />
   </ItemGroup>
   <ItemGroup>
