--- a/AssetImporter/AssetImporter.csproj
+++ b/AssetImporter/AssetImporter.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,6 +47,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FontFileFormat.cs" />
+    <Compile Include="FontImporter.cs" />
     <Compile Include="GLSLImporter.cs" />
     <Compile Include="MaterialFileFormat.cs" />
     <Compile Include="MeshFileFormat.cs" />
